@@ -7,6 +7,10 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  07 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/transports/fetchcommmand.py:
+  corrected an issue where it wasn't correctly parsing out an appropriate distdir
+  when file_name was specified.
+
   07 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild-default-functions.sh: 
   addition of INSTALL_MASK support to dyn_preinst.   #67190
 
